# pcos

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  domain.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 20260224_add_last_verified.py  __init__.py
schemas/: personal-assistant.yaml  regulatory-compliance.yaml  software-architecture.yaml
src/percos/: __init__.py  app.py  cli.py  config.py  llm.py  logging.py  schema.py
src/percos/api/: __init__.py  auth.py  deps.py  panel.py  routes.py  schemas.py
src/percos/engine/: __init__.py  brain.py  compiler.py  consistency.py  deadlines.py  evaluation.py  evolution.py  identity_resolution.py  ingestion.py  integrations.py  retrieval.py  runtime.py  security.py  style_tracker.py  sync.py  ttm.py
src/percos/models/: __init__.py  enums.py  events.py  ontology.py
src/percos/stores/: __init__.py  audit_log.py  database.py  episodic_store.py  graph.py  procedural_policy_stores.py  semantic_store.py  tables.py
tests/: conftest.py  test_api.py  test_api_extended.py  test_benchmarks.py  test_deadlines.py  test_engine.py  test_gaps.py  test_identity_resolution.py  test_low_gaps.py  test_medium_gaps.py  test_models.py  test_schema.py  test_stores.py  test_sync.py
